still have the annoying shifting elements bug

--- a/src/Components/App.css
+++ b/src/Components/App.css
@@ -5,6 +5,7 @@ padding:0;
 
 .App {
   text-align: center;
+  margin:0;
   padding: 20px;
 }
 
